# hdl-modules

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  modules.yaml  requirements.txt  testbench.v
.cursor/rules/: hdl-modules.mdc
.github/workflows/: release.yml  test-and-docs.yml  vst-release.yml
Sine_tab/v1/: dds.v  out.vcd  qqq  readme_sinetabledds.md  sin.v  sinetable.v  sinetabledds.v  tbsinetable.v  tbsinetabledds.v  v1.md
Sine_tab/v2/: v2.md
adsr/: README.md  adsr.v  exp.rom
adsr/test/: out.vcd  test.gtkw  test.sh  testbench  testbench.v
adsr32/: tbadsr32.v
common/: README.md  bitscan.v  frqdivmod.v  lin2exp_t.v  note_mono.v  param_reg.v  prio_encoder.v  reg14.v  reg7.v  reg_sr.v  strobe_gen.v
common/frqdivmod_test/: out.vcd  test.gtkw  test.sh  testbench  testbench.v
common/param_reg_test/: test.gtkw  test.sh  testbench.v
common/powerup_reset_test/: out.vcd  test.gtkw  test.sh  testbench
common/reg_sr_test/: test.gtkw  test.sh  testbench.v
common/strobe_gen_test/: out.vcd  test.gtkw  test.sh  testbench  testbench.v
dds/: README.md  dds.v  note2dds.v  note_pitch2dds.v
dds/note2dds_test/: test.gtkw  test.sh  testbench.v
dds/note_pitch2dds_test/: test.gtkw  test.sh  testbench.v
dds/test/: test.gtkw  test.sh  testbench  testbench.v
dds_transform/: README.md  dds2meandr.v  dds2pwm.v  dds2revsaw.v  dds2saw.v  dds2sin.v  dds2square.v  dds2tria.v
dds_transform/test/: test.gtkw  test.sh  testbench  testbench.v
docs/: ADDING_MODULES.md  CTRLRX_PANEL.md  DEPENDENCIES.md  LEGACY_MIGRATION_PLAN.md  MONO_SYNTH_MIDI.md  TODO.md  WSL_NETWORKING.md
hdl-modules-tester/: CMakeLists.txt  Makefile  README.md  engine.cpp  engine.h  generator.sv  main.cpp  midi_decode.cpp  midi_decode.h  midi_events.h  net_socket.cpp  net_socket.h  synth_core.cpp  synth_core.h
hdl-modules-tester/protocol/: hdl_net.h  test_hdl_net.cpp
io/: README.md  midi_in.v
io/midi_in_test/: test.sh  testbench.v
lfo/: lfo.v  lfo_rate_lut.v
mono_voice/: README.md  mono_voice.v
powerup_reset/: README.md  powerup_reset.v
rnd/: README.md  rnd1.v  rnd8.v  rndx.v
scripts/: check_wsl_network.sh  e2e_mono_synth.sh  e2e_ubuntu.sh  package_engine_release.sh  run_mini_fx.sh  run_mono_synth.sh  run_noise_box.sh  run_udp_engine.sh
sine/: LICENSE  readme_testbench.md  sinewave.v  tbsinewave.v
svf/: README.md  note_fcut_lut.v  svf.v  svf_fcut_mix.v
synths/: README.md
tools/: export_wave.tcl  gen_ctrlrx_panel.py  gen_lfo_rate_lut.py  gen_note_fcut_lut.py  gen_readme.py  gen_sin_lut.py  gen_svf_cc_lut.py  gen_svf_demo_wav.py  gen_vst_apvts.py  gtkwaverc.render  open_wave.py  plot_svf_achh.py  render_images.py  render_images.sh  run_tests.py  run_vcf_matrix_test.py  validate_synth_params.py
vca/: README.md  svca.v  svca16.v  svca32.v  svca_wide.v
verilator_tests/: CMakeLists.txt  Makefile  README.md  generator.sv  generator_fullrange.sv  input_keyboard.cpp  input_keyboard.h  input_midi.cpp  input_midi.h  input_udp.cpp  input_udp.h  main.cpp  main_fullrange.cpp  main_udp.cpp  main_udp.h  net_socket.cpp  net_socket.h  output_soundcard.cpp  output_soundcard.h  output_udp.cpp  output_udp.h  output_wav.cpp  output_wav.h  shared_state.h  synth_core.cpp  synth_core.h  synth_core_fullrange.cpp  synth_core_fullrange.h  terminal_input.cpp  terminal_input.h  udp_session.h
verilator_tests/obj_dir/: Vgenerator  Vgenerator.cpp  Vgenerator.h  Vgenerator.mk  Vgenerator__ALL.cpp  Vgenerator__ALL.d  Vgenerator__ConstPool_0.cpp  Vgenerator__Syms.cpp  Vgenerator__Syms.h  Vgenerator___024root.h  Vgenerator___024root__DepSet_h2eaf9ffd__0.cpp  Vgenerator___024root__DepSet_h2eaf9ffd__0__Slow.cpp  Vgenerator___024root__DepSet_h41c5e58f__0.cpp  Vgenerator___024root__DepSet_h41c5e58f__0__Slow.cpp  Vgenerator___024root__Slow.cpp  Vgenerator__pch.h  Vgenerator__ver.d  Vgenerator_classes.mk  input_keyboard.d  input_midi.d  main.d  output_soundcard.d  output_wav.d  synth_core.d  terminal_input.d
verilator_tests/protocol/: hdl_net.h  test_hdl_net.cpp
verilator_tests/scripts/: build_windows_mingw.sh  run_udp_engine_win.bat  udp_smoke_test.py
vst_bridge/: CHANGELOG.md  CMakeLists.txt  README.md
vst_bridge/Source/: BufferLevelBar.h  BuildInfo.h.in  ConnectionIndicator.h  DeliveryQualityMonitor.h  NetBridge.cpp  NetBridge.h  PanelLampButton.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthParamSchema.cpp  SynthParamSchema.h
vst_bridge/cmake/: cross_mingw_juce_patch.cmake  llvm-mingw.cmake  mingw-w64.cmake  mingw_forced_include.h  mingw_win_libs.cmake
vst_bridge/cmake/mingw_compat/: Dbghelp.h
vst_bridge/protocol/: hdl_net.h
vst_bridge/scripts/: build_linux.sh  build_release.sh  build_windows_mingw.sh  download_llvm_mingw.sh  install_linux_deps.sh  install_windows_vst.sh
(+218 files in other folders)
